--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>About Us — G. Buzbee Realty</title>
+  <title>About Us — G. Buzbee Inc.</title>
   <meta name="description" content="Learn about G. Buzbee Incorporated and Garrett Buzbee, licensed General Contractor serving High Springs, FL." />
   <link rel="icon" href="images/GBI-favicon.png" type="image/png" />
   <link rel="stylesheet" href="css/core.css" />
@@ -23,8 +23,8 @@
 
   <header class="container nav">
     <a href="./index.html" class="brand">
-      <img src="images/Pantone-Orange-GBI-Logo-Clear.png" alt="G. Buzbee Realty logo" />
-      <strong style="color: var(--color-brand); font-size: 1.2em;">G. Buzbee Realty</strong>
+      <img src="images/Pantone-Orange-GBI-Logo-Clear.png" alt="G. Buzbee Inc. logo" />
+      <strong style="color: var(--color-brand); font-size: 1.2em;">G. Buzbee Inc.</strong>
     </a>
     <nav id="primary-nav" class="primary-nav cluster" aria-label="Primary">
       <a href="./index.html" class="button secondary">Home</a>
@@ -51,7 +51,7 @@
 
     <section class="section page-header">
       <div class="container stack">
-        <h1>About G. Buzbee Realty</h1>
+        <h1>About G. Buzbee Inc.</h1>
         <p class="hero-sub text-muted-strong">Professional real estate services built on experience and expertise.</p>
       </div>
     </section>
@@ -97,7 +97,7 @@
   <footer class="section">
     <div class="container footer-grid">
       <div class="footer-left">
-        <small>© <span id="year"></span> G. Buzbee Realty</small>
+        <small>© <span id="year"></span> G. Buzbee Inc.</small>
       </div>
       <div class="footer-center">
         <small>High Springs, FL 32655</small>
