--- a/blueprints.html
+++ b/blueprints.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Blueprints — G. Buzbee Realty</title>
-  <meta name="description" content="View construction blueprints and plans for G. Buzbee Realty properties." />
+  <title>Blueprints — G. Buzbee Inc.</title>
+  <meta name="description" content="View construction blueprints and plans for G. Buzbee Inc. properties." />
   <link rel="icon" href="images/GBI-favicon.png" type="image/png" />
   <link rel="stylesheet" href="css/core.css" />
   <link rel="stylesheet" href="css/themes/buzbee.css" />
@@ -58,8 +58,8 @@
 
   <header class="container nav">
     <a href="./index.html" class="brand">
-      <img src="images/Pantone-Orange-GBI-Logo-Clear.png" alt="G. Buzbee Realty logo" />
-      <strong style="color: var(--color-brand); font-size: 1.2em;">G. Buzbee Realty</strong>
+      <img src="images/Pantone-Orange-GBI-Logo-Clear.png" alt="G. Buzbee Inc. logo" />
+      <strong style="color: var(--color-brand); font-size: 1.2em;">G. Buzbee Inc.</strong>
     </a>
     <nav id="primary-nav" class="primary-nav cluster" aria-label="Primary">
       <a href="./index.html" class="button secondary">Home</a>
@@ -100,7 +100,7 @@
           <h2>Professional Construction Expertise</h2>
           <p>
             Leveraging years of experience in large commercial construction and a degree from 
-            the University of Florida in Building Construction, G. Buzbee Realty brings 
+            the University of Florida in Building Construction, G. Buzbee Inc. brings 
             professional-grade planning and execution to every project.
           </p>
         </div>
@@ -180,7 +180,7 @@
   <footer class="section">
     <div class="container footer-grid">
       <div class="footer-left">
-        <small>© <span id="year"></span> G. Buzbee Realty</small>
+        <small>© <span id="year"></span> G. Buzbee Inc.</small>
       </div>
       <div class="footer-center">
         <small>High Springs, FL 32655</small>
