--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Contact Us — G. Buzbee Realty</title>
-  <meta name="description" content="Get in touch with G. Buzbee Realty for all your real estate needs in High Springs, FL." />
+  <title>Contact Us — G. Buzbee Inc.</title>
+  <meta name="description" content="Get in touch with G. Buzbee Inc. for all your real estate needs in High Springs, FL." />
   <link rel="icon" href="images/GBI-favicon.png" type="image/png" />
   <link rel="stylesheet" href="css/core.css" />
   <link rel="stylesheet" href="css/themes/buzbee.css" />
@@ -39,8 +39,8 @@
 
   <header class="container nav">
     <a href="./index.html" class="brand">
-      <img src="images/Pantone-Orange-GBI-Logo-Clear.png" alt="G. Buzbee Realty logo" />
-      <strong style="color: var(--color-brand); font-size: 1.2em;">G. Buzbee Realty</strong>
+      <img src="images/Pantone-Orange-GBI-Logo-Clear.png" alt="G. Buzbee Inc. logo" />
+      <strong style="color: var(--color-brand); font-size: 1.2em;">G. Buzbee Inc.</strong>
     </a>
     <nav id="primary-nav" class="primary-nav cluster" aria-label="Primary">
       <a href="./index.html" class="button secondary">Home</a>
@@ -75,7 +75,7 @@
     <section class="section">
       <div class="container">
         <div class="contact-info">
-          <h2>G. Buzbee Realty</h2>
+          <h2>G. Buzbee Inc.</h2>
           <p><strong>Address:</strong> P.O. Box 574, High Springs, FL 32655</p>
           <p><strong>Phone:</strong> <a href="tel:386-454-2555">386-454-2555</a></p>
           <p><strong>Email:</strong> <a href="mailto:info@gbuzbee.com">info@gbuzbee.com</a></p>
@@ -84,7 +84,7 @@
         <form id="contact-form" class="form" action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
           <h2 style="grid-column: 1 / -1; margin-bottom: var(--space-2);">Contact</h2>
           <!-- Formspree config: subject and honeypot for spam -->
-          <input type="hidden" name="_subject" value="Website Inquiry from G. Buzbee Realty" />
+          <input type="hidden" name="_subject" value="Website Inquiry from G. Buzbee Inc." />
           <input type="text" name="_gotcha" tabindex="-1" autocomplete="off" style="position:absolute; left:-10000px; top:auto; width:1px; height:1px; overflow:hidden;" aria-hidden="true" />
 
           <div class="field">
@@ -162,7 +162,7 @@
   <footer class="section">
     <div class="container footer-grid">
       <div class="footer-left">
-        <small>© <span id="year"></span> G. Buzbee Realty</small>
+        <small>© <span id="year"></span> G. Buzbee Inc.</small>
       </div>
       <div class="footer-center">
         <small>High Springs, FL 32655</small>
