--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Gallery — G. Buzbee Realty</title>
+  <title>Gallery — G. Buzbee Inc.</title>
   <meta name="description" content="Browse our featured property listings and gallery of homes in High Springs, FL." />
   <link rel="icon" href="images/GBI-favicon.png" type="image/png" />
   <link rel="stylesheet" href="css/core.css" />
@@ -94,8 +94,8 @@
 
   <header class="container nav">
     <a href="./index.html" class="brand">
-      <img src="images/Pantone-Orange-GBI-Logo-Clear.png" alt="G. Buzbee Realty logo" />
-      <strong style="color: var(--color-brand); font-size: 1.2em;">G. Buzbee Realty</strong>
+      <img src="images/Pantone-Orange-GBI-Logo-Clear.png" alt="G. Buzbee Inc. logo" />
+      <strong style="color: var(--color-brand); font-size: 1.2em;">G. Buzbee Inc.</strong>
     </a>
     <nav id="primary-nav" class="primary-nav cluster" aria-label="Primary">
       <a href="./index.html" class="button secondary">Home</a>
@@ -205,7 +205,7 @@
   <footer class="section">
     <div class="container footer-grid">
       <div class="footer-left">
-        <small>© <span id="year"></span> G. Buzbee Realty</small>
+        <small>© <span id="year"></span> G. Buzbee Inc.</small>
       </div>
       <div class="footer-center">
         <small>High Springs, FL 32655</small>
