--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>G. Buzbee Realty - High Springs, FL Real Estate</title>
-  <meta name="description" content="G. Buzbee Realty offers professional real estate services in High Springs, Florida and surrounding areas." />
+  <title>G. Buzbee Inc. - High Springs, FL Real Estate</title>
+  <meta name="description" content="G. Buzbee Inc. offers professional real estate services in High Springs, Florida and surrounding areas." />
   <link rel="icon" href="images/GBI-favicon.png" type="image/png" />
   <link rel="stylesheet" href="css/core.css" />
   <link rel="stylesheet" href="css/themes/buzbee.css" />
@@ -66,8 +66,8 @@
 
   <header class="container nav">
     <a href="./index.html" class="brand">
-      <img src="images/Pantone-Orange-GBI-Logo-Clear.png" alt="G. Buzbee Realty logo" />
-      <strong style="color: var(--color-brand); font-size: 1.2em;">G. Buzbee Realty</strong>
+      <img src="images/Pantone-Orange-GBI-Logo-Clear.png" alt="G. Buzbee Inc. logo" />
+      <strong style="color: var(--color-brand); font-size: 1.2em;">G. Buzbee Inc.</strong>
     </a>
     <nav id="primary-nav" class="primary-nav cluster" aria-label="Primary">
       <a href="./index.html" class="button secondary" aria-current="page">Home</a>
@@ -89,7 +89,7 @@
       </div>
       <div class="container hero-inner">
         <div class="hero-panel stack">
-          <h1 class="hero-title">G. Buzbee Realty</h1>
+          <h1 class="hero-title">G. Buzbee Inc.</h1>
           <p class="hero-sub">Professional real estate services in High Springs, Florida and surrounding areas. Whether you're buying or selling, we're here to help you every step of the way.</p>
           <div class="cluster mt-2">
             <a href="./contact.html" class="button">Get In Touch</a>
@@ -125,7 +125,7 @@
 
     <section class="section">
       <div class="container stack">
-        <h2>Why Choose G. Buzbee Realty?</h2>
+        <h2>Why Choose G. Buzbee Inc?</h2>
         <div class="grid">
           <div class="card stack">
             <h3>Local Expertise</h3>
@@ -160,7 +160,7 @@
   <footer class="section">
     <div class="container footer-grid">
       <div class="footer-left">
-        <small>© <span id="year"></span> G. Buzbee Realty</small>
+        <small>© <span id="year"></span> G. Buzbee Inc.</small>
       </div>
       <div class="footer-center">
         <small>High Springs, FL 32655</small>
