--- a/properties/sample-property.html
+++ b/properties/sample-property.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Property Name — G. Buzbee Realty</title>
-  <meta name="description" content="View details for this property listed with G. Buzbee Realty." />
+  <title>Property Name — G. Buzbee Inc.</title>
+  <meta name="description" content="View details for this property listed with G. Buzbee Inc." />
   <link rel="icon" href="../images/GBI-favicon.png" type="image/png" />
   <link rel="stylesheet" href="../css/core.css" />
   <link rel="stylesheet" href="../css/themes/buzbee.css" />
@@ -67,8 +67,8 @@
 
   <header class="container nav">
     <a href="../index.html" class="brand">
-      <img src="../images/Pantone-Orange-GBI-Logo-Clear.png" alt="G. Buzbee Realty logo" />
-      <strong style="color: var(--color-brand); font-size: 1.2em;">G. Buzbee Realty</strong>
+      <img src="../images/Pantone-Orange-GBI-Logo-Clear.png" alt="G. Buzbee Inc. logo" />
+      <strong style="color: var(--color-brand); font-size: 1.2em;">G. Buzbee Inc.</strong>
     </a>
     <nav id="primary-nav" class="primary-nav cluster" aria-label="Primary">
       <a href="../index.html" class="button secondary">Home</a>
@@ -174,7 +174,7 @@
   <footer class="section">
     <div class="container footer-grid">
       <div class="footer-left">
-        <small>© <span id="year"></span> G. Buzbee Realty</small>
+        <small>© <span id="year"></span> G. Buzbee Inc.</small>
       </div>
       <div class="footer-center">
         <small>High Springs, FL 32655</small>
