--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>About Us — G. Buzbee Inc.</title>
   <meta name="description" content="Learn about G. Buzbee Incorporated and Garrett Buzbee, licensed General Contractor serving High Springs, FL." />
-  <link rel="icon" href="images/GBI-favicon.png" type="image/png" />
+  <link rel="icon" href="images/fav16-1.png" type="image/png" />
   <link rel="stylesheet" href="css/core.css" />
   <link rel="stylesheet" href="css/themes/buzbee.css" />
   <script defer src="js/theme-toggle.js"></script>
@@ -63,16 +63,17 @@
             G. Buzbee Incorporated is owned and operated by Garrett Buzbee. Garrett holds a degree in Building Construction from the University of Florida and is a licensed General Contractor. Beginning with large commercial construction, Garrett brings extensive experience and professional expertise to every real estate transaction.
           </p>
           
-          <div class="callout mt-6">
-            <h2>Our Commitment</h2>
-            <p>Whether you're buying your first home, selling a property, or investing in real estate, we provide personalized service and expert guidance throughout the entire process.</p>
+          <div class="grid gap-4 mt-6" style="grid-template-columns: 1fr; gap: var(--space-4);">
+            <div class="card stack">
+              <h3>Our Commitment</h3>
+              <p>Whether you're buying your first home, selling a property, or investing in real estate, we provide personalized service and expert guidance throughout the entire process.</p>
+            </div>
           </div>
 
-          <div class="grid gap-6 mt-6" style="grid-template-columns: 1fr;">
+          <div class="grid gap-4 mt-6" style="grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: var(--space-4);">
             <div class="card stack">
               <h3>🎓 Education & Licensing</h3>
-              <p>Degree in Building Construction from the University of Florida</p>
-              <p>Licensed General Contractor</p>
+              <p>Degree in Building Construction from the University of Florida. Licensed General Contractor with comprehensive training in construction management and building systems.</p>
             </div>
 
             <div class="card stack">
@@ -83,6 +84,11 @@
             <div class="card stack">
               <h3>📍 Local Knowledge</h3>
               <p>Deep understanding of High Springs, FL and surrounding communities ensures you get the best opportunities in the area.</p>
+            </div>
+            
+            <div class="card stack">
+              <h3>💼 Professional Service</h3>
+              <p>Dedicated to providing transparent, trustworthy guidance through every step of your real estate journey.</p>
             </div>
           </div>
 
