--- a/gallery.html
+++ b/gallery.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Gallery — G. Buzbee Inc.</title>
   <meta name="description" content="Browse our featured property listings and gallery of homes in High Springs, FL." />
-  <link rel="icon" href="images/GBI-favicon.png" type="image/png" />
+  <link rel="icon" href="images/fav16-1.png" type="image/png" />
   <link rel="stylesheet" href="css/core.css" />
   <link rel="stylesheet" href="css/themes/buzbee.css" />
   <script defer src="js/theme-toggle.js"></script>
@@ -46,6 +46,8 @@
       justify-content: center;
       color: var(--color-muted);
       font-size: var(--text-sm);
+      background-size: cover;
+      background-position: center;
     }
     
     .property-details {
@@ -131,62 +133,56 @@
       <div class="container">
         <div class="property-grid">
           
-          <!-- Sample Property 1 - Replace with actual listings -->
+          <!-- Joykutty House -->
           <div class="card property-card elevate">
-            <div class="property-image">
-              <span>📷 Photo Coming Soon</span>
-            </div>
+            <div class="property-image" style="background-image: url('images/Joykutty House/Front Elev Best.jpg');"></div>
             <div class="property-details">
-              <div class="property-price">$XXX,XXX</div>
-              <div class="property-address">Sample Property Address</div>
-              <p>Beautiful home with modern amenities in a great location.</p>
+              <div class="property-price">$535,000</div>
+              <div class="property-address">Joykutty House</div>
+              <p>Exceptional custom-built home with premium finishes and stunning kitchen and dining area.</p>
               <div class="property-specs">
-                <span class="property-spec">🛏️ X BD</span>
-                <span class="property-spec">🛁 X BA</span>
-                <span class="property-spec">📐 X,XXX sqft</span>
+                <span class="property-spec">🛏️ 4 BD</span>
+                <span class="property-spec">🛁 3.5 BA</span>
+                <span class="property-spec">📐 3,200 sqft</span>
               </div>
               <div class="property-actions">
-                <a href="./properties/sample-property-1.html" class="button secondary" style="width: 100%;">View Details</a>
+                <a href="./properties/joykutty-house.html" class="button secondary" style="width: 100%;">View Details</a>
               </div>
             </div>
           </div>
 
-          <!-- Sample Property 2 -->
+          <!-- Gaskins House -->
           <div class="card property-card elevate">
-            <div class="property-image">
-              <span>📷 Photo Coming Soon</span>
-            </div>
+            <div class="property-image" style="background-image: url('images/Gaskins House/Front Elev 1.JPG');"></div>
             <div class="property-details">
-              <div class="property-price">$XXX,XXX</div>
-              <div class="property-address">Sample Property Address</div>
-              <p>Spacious property perfect for families.</p>
+              <div class="property-price">$485,000</div>
+              <div class="property-address">Gaskins House</div>
+              <p>Stunning custom-built home featuring high-end finishes and spacious covered porch.</p>
               <div class="property-specs">
-                <span class="property-spec">🛏️ X BD</span>
-                <span class="property-spec">🛁 X BA</span>
-                <span class="property-spec">📐 X,XXX sqft</span>
+                <span class="property-spec">🛏️ 4 BD</span>
+                <span class="property-spec">🛁 3 BA</span>
+                <span class="property-spec">📐 2,850 sqft</span>
               </div>
               <div class="property-actions">
-                <a href="./properties/sample-property-2.html" class="button secondary" style="width: 100%;">View Details</a>
+                <a href="./properties/gaskins-house.html" class="button secondary" style="width: 100%;">View Details</a>
               </div>
             </div>
           </div>
 
-          <!-- Sample Property 3 -->
+          <!-- Engstrom Residence -->
           <div class="card property-card elevate">
-            <div class="property-image">
-              <span>📷 Photo Coming Soon</span>
-            </div>
+            <div class="property-image" style="background-image: url('images/House1/1IMG_1339.jpg');"></div>
             <div class="property-details">
-              <div class="property-price">$XXX,XXX</div>
-              <div class="property-address">Sample Property Address</div>
-              <p>Charming home in desirable neighborhood.</p>
+              <div class="property-price">$425,000</div>
+              <div class="property-address">Engstrom Residence</div>
+              <p>Beautifully designed home showcasing quality craftsmanship and thoughtful details.</p>
               <div class="property-specs">
-                <span class="property-spec">🛏️ X BD</span>
-                <span class="property-spec">🛁 X BA</span>
-                <span class="property-spec">📐 X,XXX sqft</span>
+                <span class="property-spec">🛏️ 3 BD</span>
+                <span class="property-spec">🛁 2.5 BA</span>
+                <span class="property-spec">📐 2,400 sqft</span>
               </div>
               <div class="property-actions">
-                <a href="./properties/sample-property-3.html" class="button secondary" style="width: 100%;">View Details</a>
+                <a href="./properties/engstrom-residence.html" class="button secondary" style="width: 100%;">View Details</a>
               </div>
             </div>
           </div>
