--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>G. Buzbee Inc. - High Springs, FL Real Estate</title>
   <meta name="description" content="G. Buzbee Inc. offers professional real estate services in High Springs, Florida and surrounding areas." />
-  <link rel="icon" href="images/GBI-favicon.png" type="image/png" />
+  <link rel="icon" href="images/fav16-1.png" type="image/png" />
   <link rel="stylesheet" href="css/core.css" />
   <link rel="stylesheet" href="css/themes/buzbee.css" />
   <script defer src="js/theme-toggle.js"></script>
