--- a/blueprints.html
+++ b/blueprints.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Blueprints — G. Buzbee Inc.</title>
   <meta name="description" content="View construction blueprints and plans for G. Buzbee Inc. properties." />
-  <link rel="icon" href="images/GBI-favicon.png" type="image/png" />
+  <link rel="icon" href="images/fav16-1.png" type="image/png" />
   <link rel="stylesheet" href="css/core.css" />
   <link rel="stylesheet" href="css/themes/buzbee.css" />
   <script defer src="js/theme-toggle.js"></script>
