--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Contact Us — G. Buzbee Inc.</title>
   <meta name="description" content="Get in touch with G. Buzbee Inc. for all your real estate needs in High Springs, FL." />
-  <link rel="icon" href="images/GBI-favicon.png" type="image/png" />
+  <link rel="icon" href="images/fav16-1.png" type="image/png" />
   <link rel="stylesheet" href="css/core.css" />
   <link rel="stylesheet" href="css/themes/buzbee.css" />
   <script defer src="js/theme-toggle.js"></script>
