property and BP update
need some images still

--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,7 @@
 <html lang="en" data-theme="light">
 <head>
   <meta charset="utf-8" />
+  <script>(function(){var t=localStorage.getItem('gw_theme');if(t==='dark'||t==='light')document.documentElement.setAttribute('data-theme',t);else if(window.matchMedia&&window.matchMedia('(prefers-color-scheme: dark)').matches)document.documentElement.setAttribute('data-theme','dark');})();</script>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Contact Us — G. Buzbee Inc.</title>
   <meta name="description" content="Get in touch with G. Buzbee Inc. for all your real estate needs in High Springs, FL." />
