--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" data-theme="light">
 <head>
   <meta charset="utf-8" />
+  <script>(function(){var t=localStorage.getItem('gw_theme');if(t==='dark'||t==='light')document.documentElement.setAttribute('data-theme',t);else if(window.matchMedia&&window.matchMedia('(prefers-color-scheme: dark)').matches)document.documentElement.setAttribute('data-theme','dark');})();</script>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>G. Buzbee Inc. - High Springs, FL Real Estate</title>
   <meta name="description" content="G. Buzbee Inc. offers professional real estate services in High Springs, Florida and surrounding areas." />
