Fixed JPG to jpg

--- a/gallery.html
+++ b/gallery.html
@@ -166,7 +166,7 @@
           <!-- Gaskins House -->
           <div class="card property-card elevate">
             <a href="./properties/gaskins-house.html" style="display: block; text-decoration: none; color: inherit;">
-              <div class="property-image" style="background-image: url('images/Gaskins House/Front Elev 1-small.JPG');"></div>
+              <div class="property-image" style="background-image: url('images/Gaskins House/Front Elev 1-small.jpg');"></div>
             </a>
             <div class="property-details">
               <div class="property-price">$485,000</div>
@@ -233,3 +233,4 @@
   </script>
 </body>
 </html>
+
